--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,17 +7,21 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
+        kotlinVersion = "1.3.41"
     }
     repositories {
         google()
         jcenter()
     }
+      
     dependencies {
         classpath("com.android.tools.build:gradle:4.1.0")
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
 
 allprojects {
     repositories {
@@ -30,9 +34,13 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-
+        maven {
+              // All of Detox' artifacts are provided via the npm module
+               url "$rootDir/../node_modules/detox/Detox-android"
+          }
+        
         google()
         jcenter()
-        maven { url 'https://www.jitpack.io' }
+        maven { url 'https://www.jitpack.io'}
     }
 }
