--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test:android-release": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug",
+    "test:android": "detox test  -c android",
+    "test:ios-debug":"xcodebuild -workspace ios/Firebase_MessageApp.xcworkspace -scheme Firebase_MessageApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+    "test:ios": "detox test  -c ios"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
@@ -21,6 +25,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "@react-navigation/stack": "^6.0.1",
     "axios": "^0.21.1",
+    "detox": "^18.20.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-actions-sheet": "^0.5.1",
@@ -43,5 +48,30 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "detox": {
+    "configurations": {
+    "android.emu.debug": {
+    "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+    "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
+    "type": "android.emulator",
+    "name": "Pixel_4_API_24"
+    },
+    "android.emu.release": {
+    "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+    "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
+    "type": "android.emulator",
+    "name": "Pixel_4_API_24"
+    },
+    "ios.sim.debug": {
+      "type": "ios.simulator",
+      "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/Firebase_MessageApp.app",
+      "build": "xcodebuild -workspace ios/Firebase_MessageApp.xcworkspace -scheme Firebase_MessageApp -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+      "device": {
+        "type": "iPhone 12"
+      }
+    },
+    "test-runner": "jest"
+    }
   }
 }
